Test Xtext integration (failed)
Failed Xtext integration with a number of insights. Delete the branch once the main branch is working